             appender_thresholds_adjust return number of appenders changed.
    *   (ms) [RT 34400] New :nostrict target which allows redefining a 
             category within a Log4perl configuration file without error
             or even a warning.
    *   (ms) [RT 34401] Applied patch by Jae Gangemi, who fixed
             code references in @INC on Win32 systems. 

1.24 (2009/07/08)
    *   (ms) Fixed bug with Log::Log4perl::Util::tmpfile_name which 
             surfaced on VMS, reported by Ben Humphreys.
    *   (ms) Fixed system-wide threshold to no longer lower appender 
             thresholds. Bug reported by Jean-Denis Muys.
    *   (ms) Added benchmark to determine impact of eval-free handlers
    *   (ms) Merged with eval_free branch. Now there are no more 
             eval("") statements left in the code, making it much easier 
             to debug. Performance on init() is about the same, performance 
             on init_and_watch() (noops and logged statements alike) is 
             25% slower but still in the range of 400,000/sec on my 
             1.80Ghz CPU.

1.23 (2009/05/12)
    *   (ms) DBI-1.608 removed a DBD::File 'feature' that allowed leaving
             out parameters in a bound execute(). This caused the test
             suite to fail (http://groups.google.com/group/perl.cpan.testers/browse_thread/thread/af1f5c875165c387). Fixed the test cases to pass the correct 
             number of parameters every time.
    *   (ms) Better error message in the DBI appender on bad SQL, missing
             bind parameters, or other execute() errors.
    *   (ms) Made DBI test suite more robust against preexisting conditions
    *   (ms) Added force_next_check() for init_and_watch(), cleaned up
             Config::Watcher code.
    *   (ms) Fixed test suite to run on Strawberry Perl on Win32 (reported
             by kmx on https://rt.cpan.org/Ticket/Display.html?id=45983)